Fix overflow issue on result heading which caused pane width to flickr with long test names

--- a/src/styles/blocks/status.scss
+++ b/src/styles/blocks/status.scss
@@ -11,6 +11,7 @@
                 display: flex;
                 flex-grow: 1;
                 padding: 0 var(--spacing-half);
+                overflow-wrap: anywhere;
             }
 
             & > .status {
